srcs/tester/base/queue/constructor/log.txt
./base/queue/constructor/patched.cpp:12:2: error: use of undeclared identifier 'ft'
 ft::queue<int, std::deque<int> > first; // empty queue
 ^
./base/queue/constructor/patched.cpp:13:2: error: use of undeclared identifier 'ft'
 ft::queue<int, std::deque<int> > second (mydeck); // queue initialized to copy of deque
 ^
./base/queue/constructor/patched.cpp:15:2: error: use of undeclared identifier 'ft'
 ft::queue<int,std::list<int> > third; // empty queue with list as underlying container
 ^
./base/queue/constructor/patched.cpp:16:2: error: use of undeclared identifier 'ft'
 ft::queue<int,std::list<int> > fourth (mylist);
 ^
./base/queue/constructor/patched.cpp:18:36: error: use of undeclared identifier 'first'
 std::cout << "size of first: " << first.size() << '\n';
                                   ^
./base/queue/constructor/patched.cpp:19:37: error: use of undeclared identifier 'second'
 std::cout << "size of second: " << second.size() << '\n';
                                    ^
./base/queue/constructor/patched.cpp:20:36: error: use of undeclared identifier 'third'
 std::cout << "size of third: " << third.size() << '\n';
                                   ^
./base/queue/constructor/patched.cpp:21:37: error: use of undeclared identifier 'fourth'
 std::cout << "size of fourth: " << fourth.size() << '\n';
                                    ^
8 errors generated.
